mobile update - responsive index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/a3cedbb514.js" crossorigin="anonymous"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Home - Nikela</title>
 </head>
 
 <body>
@@ -39,7 +39,25 @@
             <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
             <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
         </ul>
+        <button id="burguer-menu"><i class="fa-solid fa-bars"></i></button>
+       
     </header>
+    <div id="mobile-menu">
+        <button id="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
+        <ul class="mobile-navbar-list">
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Tienda</a></li>
+            <li><a href="">Sobre nosotros</a></li>
+            <li><a href="">Contactanos</a></li>
+        </ul>
+        <ul class="mobile-nav-social-list">
+            <li class="media-mobile-title">CONTACTANOS</li>
+            <li><a href=""><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+            <li><a href=""><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+            <li><a href=""><i class="fa-brands fa-whatsapp"></i>Whatsapp</a></li>
+            <li><a href=""><i class="fa-solid fa-envelope"></i></a>Gmail</li>
+        </ul>
+    </div>
     <!-- home banner -->
     <div class="main-banner-cont">
         <div>
