--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </a>
         <nav>
             <ul class="navbar-list">
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Tienda</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="tienda.html">Tienda</a></li>
                 <li><a href="">Sobre nosotros</a></li>
                 <li><a href="">Contactanos</a></li>
             </ul>
