--- a/tienda.html
+++ b/tienda.html
@@ -28,7 +28,7 @@
             <ul class="navbar-list">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="tienda.html">Tienda</a></li>
-                <li><a href="">Sobre nosotros</a></li>
+                <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
                 <li><a href="">Contactanos</a></li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
         <ul class="mobile-navbar-list">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="tienda.html">Tienda</a></li>
-            <li><a href="">Sobre nosotros</a></li>
+            <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
