--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="navbar-list">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="tienda.html">Tienda</a></li>
-                <li><a href="">Sobre nosotros</a></li>
+                <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
                 <li><a href="">Contactanos</a></li>
             </ul>
         </nav>
@@ -45,9 +45,9 @@
     <div id="mobile-menu">
         <button id="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
         <ul class="mobile-navbar-list">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Tienda</a></li>
-            <li><a href="">Sobre nosotros</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="tienda.html">Tienda</a></li>
+            <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
