--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Fonts - Poppins - Regular 400 -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> -->
     <!-- Fonts - Poppins - ExtraLight 200 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +24,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="tienda.html">Tienda</a></li>
                 <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="">Contactanos</a></li>
+                <li><a href="contacto.html">Contactanos</a></li>
             </ul>
         </nav>
         <ul class="nav-social-list">
@@ -46,7 +42,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="tienda.html">Tienda</a></li>
             <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-            <li><a href="">Contactanos</a></li>
+            <li><a href="contacto.html">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
             <li class="media-mobile-title">CONTACTANOS</li>
@@ -73,17 +69,32 @@
             <!-- Shorts -->
             <div class="card-index local-1">
                 <div class="false-bg"></div>
-                <a href="">Shorts</a>
+                <div class="location-cont">
+                    <p>Nombre del local</p>
+                    <div class="location">
+                        <i class="fa-solid fa-location-dot"></i> Lugar 123
+                    </div>
+                </div>
             </div>
             <!-- Camperas -->
             <div class="card-index local-2">
                 <div class="false-bg"></div>
-                <a href="">Camperas</a>
+                <div class="location-cont">
+                    <p>Nombre del local</p>
+                    <div class="location">
+                        <i class="fa-solid fa-location-dot"></i> Lugar 123
+                    </div>
+                </div>
             </div>
             <!-- Carteras -->
             <div class="card-index local-3">
                 <div class="false-bg"></div>
-                <a href="">Carteras</a>
+                <div class="location-cont">
+                    <p>Nombre del local</p>
+                    <div class="location">
+                        <i class="fa-solid fa-location-dot"></i> Lugar 123
+                    </div>
+                </div>
             </div>
         </section>
         <div class="title-container">
@@ -98,10 +109,10 @@
             <div class="right-box" id="right-box-nosotros">
              <h2>UNA EMPRESA LIDER</h2>
              <p class="first-text"> 
-                 LLevamos corto tiempo en el mercado, pero demostramos un nivel superior de costura y calidad de nuestras telas
+                 LLevamos corto tiempo en el mercado, pero demostramos un nivel superior de costura y calidad de nuestras telas.
              </p>
              <p>
-                Brindamos productos de calidad, a un muy buen precio de mercado, con atención rápida y segura
+                Brindamos productos de calidad, a un muy buen precio de mercado, con atención rápida y segura.
              </p>
             </div>
          </section>
@@ -110,6 +121,70 @@
             <button id="minorista">VENTA MINORISTA <i class="fa-solid fa-chevron-down"></i></button>
          </div>
          
+
+        <!-- Valoraciones -->
+        <div class="title-container">
+            <hr class="left-line">
+            <h2>VALORACIONES DE CLIENTES</h2>
+            <hr class="right-line">
+        </div>
+
+        <section class="clients-valor">
+
+            <div class="client-card">
+                <img src="img/cliente-1.png" alt="client smiling" class="client-profile">
+                <div class="client-info">
+                    <h2>Martina Ezteves</h2>
+                    <div class="line-stars">
+                        <hr>
+                        <img src="img/stars.png" alt="stars" class="stars">
+                    </div>
+                    <p class="client-comments">
+                        Las prendas que compré, tienen una calidad excelente, y el precio es más que accesible.
+                    </p>
+                </div>
+            </div>
+            <div class="client-card">
+                <img src="img/cliente-2.png" alt="client smiling" class="client-profile">
+                <div class="client-info">
+                    <h2>Romina Guerrero</h2>
+                    <div class="line-stars">
+                        <hr>
+                        <img src="img/stars.png" alt="stars" class="stars">
+                    </div>
+                    <p class="client-comments">
+                        Hace tiempo que compro en Nikela, y siempre recibo productos de excelente calidad.
+                    </p>
+                </div>
+            </div>
+            <div class="client-card">
+                <img src="img/cliente-3.png" alt="client smiling" class="client-profile">
+                <div class="client-info">
+                    <h2>Jimena Romero Díaz</h2>
+                    <div class="line-stars">
+                        <hr>
+                        <img src="img/stars.png" alt="stars" class="stars">
+                    </div>
+                    <p class="client-comments">
+                        Tanto los productos como la atención, es excelente. Super recomendado.
+                    </p>
+                </div>
+            </div>
+            <div class="client-card">
+                <img src="img/cliente-4.png" alt="client smiling" class="client-profile">
+                <div class="client-info">
+                    <h2>Claudia Baigorria</h2>
+                    <div class="line-stars">
+                        <hr>
+                        <img src="img/stars.png" alt="stars" class="stars">
+                    </div>
+                    <p class="client-comments">
+                        La calidad de la costura es impecable, y siempre recibo mis pedidos en tiempo y forma.
+                    </p>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
         <ul>
