--- a/tienda.html
+++ b/tienda.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Fonts - Poppins - Regular 400 -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> -->
     <!-- Fonts - Poppins - ExtraLight 200 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +15,10 @@
     
     <title>Tienda - Nikela</title>
 </head>
+
 <body>
     <header>
+
         <a href="index.html">
             <img src="img/logo.png" alt="logo" class="nav-logo">
         </a>
@@ -29,7 +27,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="tienda.html">Tienda</a></li>
                 <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="">Contactanos</a></li>
+                <li><a href="contacto.html">Contactanos</a></li>
             </ul>
         </nav>
         <ul class="nav-social-list">
@@ -47,7 +45,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="tienda.html">Tienda</a></li>
             <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-            <li><a href="">Contactanos</a></li>
+            <li><a href="contacto.html">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
             <li class="media-mobile-title">CONTACTANOS</li>
