--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="tienda.html">Tienda</a></li>
                 <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="">Contactanos</a></li>
+                <li><a href="contacto.html">Contactanos</a></li>
             </ul>
         </nav>
         <ul class="nav-social-list">
@@ -48,7 +48,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="tienda.html">Tienda</a></li>
             <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-            <li><a href="">Contactanos</a></li>
+            <li><a href="contacto.html">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
             <li class="media-mobile-title">CONTACTANOS</li>
