--- a/tienda.html
+++ b/tienda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,7 @@
     <script src="https://kit.fontawesome.com/a3cedbb514.js" crossorigin="anonymous"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    
+
     <title>Tienda - Nikela</title>
 </head>
 
@@ -31,13 +32,17 @@
             </ul>
         </nav>
         <ul class="nav-social-list">
-            <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-            <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i
+                        class="fa-brands fa-facebook"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li><a target="_blank"
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i
+                        class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
         </ul>
         <button id="burguer-menu"><i class="fa-solid fa-bars"></i></button>
-       
+
     </header>
     <div id="mobile-menu">
         <button id="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
@@ -48,11 +53,15 @@
             <li><a href="contacto.html">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
-            <li class="media-mobile-title">CONTACTANOS</li>
-            <li><a href=""><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-            <li><a href=""><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-brands fa-whatsapp"></i>Whatsapp</a></li>
-            <li><a href=""><i class="fa-solid fa-envelope"></i></a>Gmail</li>
+            <li class="media-mobile-title">REDES</li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i
+                        class="fa-brands fa-facebook"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li><a target="_blank"
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i
+                        class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
         </ul>
     </div>
     <!-- home banner -->
@@ -89,71 +98,155 @@
         </section>
         <div class="title-container">
             <hr class="left-line">
-            <h2>CAMPERAS</h2>
+            <h2>TODOS LOS PRODUCTOS</h2>
             <hr class="right-line">
+        </div>
+
+        <div class="filters-cont">
+
+            <div class="search-cont">
+                <div>
+                    <input type="search" placeholder="Buscar productos" id="search-bar">
+                    <button id="search-btn">Buscar</button>
+                </div>
+            </div>
+
+            <div class="check-filters-cont">
+
+                <div class="input-check-cont">
+                    <p class="option-check">Opción</p>
+                    <button class="filter-check-btn"><i class="fa-regular fa-square-check"></i></button>
+                </div>
+                <div class="input-check-cont">
+                    <p class="option-check">Opción</p>
+                    <button class="filter-check-btn"><i class="fa-regular fa-square-check"></i></button>
+                </div>
+                <div class="input-check-cont">
+                    <p class="option-check">Opción</p>
+                    <button class="filter-check-btn"><i class="fa-regular fa-square-check"></i></button>
+                </div>
+                <div class="input-check-cont">
+                    <p class="option-check">Opción</p>
+                    <button class="filter-check-btn"><i class="fa-regular fa-square-check"></i></button>
+                </div>
+                <div class="input-check-cont">
+                    <p class="option-check">Opción</p>
+                    <button class="filter-check-btn"><i class="fa-regular fa-square-check"></i></button>
+                </div>
+                <div class="input-check-cont">
+                    <p class="option-check">Opción</p>
+                    <button class="filter-check-btn"><i class="fa-regular fa-square-check"></i></button>
+                </div>
+
+            </div>
+
         </div>
 
         <section class="principales-compras-index-cards-container">
             <!-- Shorts -->
             <div class="card-index Camperas">
                 <div class="false-bg"></div>
-                <a href="">Camperas</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">CAMPERA BRILLITT</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
             <!-- Camperas -->
-            <div class="card-index Camperas">
+            <div class="card-index Calza-biker">
                 <div class="false-bg"></div>
-                <a href="">Camperas</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">CALZA BIKER</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
             <!-- Carteras -->
-            <div class="card-index Camperas">
+            <div class="card-index Cat-suit">
                 <div class="false-bg"></div>
-                <a href="">Camperas</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">CATSUIT</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
+
         </section>
-        <div class="title-container">
-            <hr class="left-line">
-            <h2>SHORTS</h2>
-            <hr class="right-line">
-        </div>
-
         <section class="principales-compras-index-cards-container">
             <!-- Shorts -->
-            <div class="card-index Shorts">
+            <div class="card-index campera-luxy">
                 <div class="false-bg"></div>
-                <a href="">Shorts</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">CAMPERA LUXY</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
             <!-- Camperas -->
-            <div class="card-index Shorts">
+            <div class="card-index campera-oversize ">
                 <div class="false-bg"></div>
-                <a href="">Shorts</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">CAMPERA OVERSIZE</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
             <!-- Carteras -->
-            <div class="card-index Shorts">
+            <div class="card-index chaqueta-engomada">
                 <div class="false-bg"></div>
-                <a href="">Shorts</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">CHAQUETA ENGOMADA</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
+
         </section>
-        <div class="title-container">
-            <hr class="left-line">
-            <h2>CARTERAS</h2>
-            <hr class="right-line">
-        </div>
 
         <section class="principales-compras-index-cards-container">
             <!-- Shorts -->
-            <div class="card-index Carteras">
+            <div class="card-index top-engomado">
                 <div class="false-bg"></div>
-                <a href="">Carteras</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">TOP ENGOMADO</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
-            <!-- Camperas -->
-            <div class="card-index Carteras">
+            <!-- Shorts -->
+            <div class="card-index pollera-engomada">
                 <div class="false-bg"></div>
-                <a href="">Carteras</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">POLLERA ENGOMADA</h2>
+                <hr>
+                <a href="">COMPRAR</a>
             </div>
-            <!-- Carteras -->
-            <div class="card-index Carteras">
+            <!-- Shorts -->
+            <div class="card-index short-engomado">
                 <div class="false-bg"></div>
-                <a href="">Carteras</a>
+                <div class="price">$price</div>
+                <h2 class="item-title">SHORT ENGOMADO</h2>
+                <hr>
+                <a href="">COMPRAR</a>
+            </div>
+
+        </section>
+
+        <section class="principales-compras-index-cards-container">
+            <!-- Shorts -->
+            <div class="card-index pollera-eco-cuero">
+                <div class="false-bg"></div>
+                <div class="price">$price</div>
+                <h2 class="item-title">POLLERA ECOCUERO</h2>
+                <hr>
+                <a href="">COMPRAR</a>
+            </div>
+            <div class="card-index test">
+                <div class="false-bg"></div>
+                <div class="price">$price</div>
+                <h2>PRÓXIMAMENTE</h2>
+                <hr>
+                <a >COMPRAR</a>
+            </div>
+            <div class="card-index test">
+                <div class="false-bg"></div>
+                <div class="price">$price</div>
+                <h2>PRÓXIMAMENTE</h2>
+                <hr>
+                <a >COMPRAR</a>
             </div>
         </section>
     </main>
@@ -186,4 +279,5 @@
     <!-- JS -->
     <script src="app.js"></script>
 </body>
+
 </html>
