--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -28,10 +28,10 @@
             </ul>
         </nav>
         <ul class="nav-social-list">
-            <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-            <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
         </ul>
         <button id="burguer-menu"><i class="fa-solid fa-bars"></i></button>
        
@@ -45,11 +45,11 @@
             <li><a href="contacto.html">Contactanos</a></li>
         </ul>
         <ul class="mobile-nav-social-list">
-            <li class="media-mobile-title">CONTACTANOS</li>
-            <li><a href=""><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-            <li><a href=""><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-brands fa-whatsapp"></i>Whatsapp</a></li>
-            <li><a href=""><i class="fa-solid fa-envelope"></i></a>Gmail</li>
+            <li class="media-mobile-title">REDES</li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
         </ul>
     </div>
     <!-- home banner -->
