--- a/contacto.html
+++ b/contacto.html
@@ -48,10 +48,10 @@
         </ul>
         <ul class="mobile-nav-social-list">
             <li class="media-mobile-title">REDES</li>
-            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i></a></li>
-            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i>Wapp</a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i>Gmail</a></li>
         </ul>
     </div>
     <!-- home banner -->
@@ -63,7 +63,11 @@
     </div>
 
     <main class="main-contacto">
-
+        <div class="title-container">
+            <hr class="left-line">
+            <h2>CONTACTANOS</h2>
+            <hr class="right-line">
+        </div>
         <section class="form-section">
             <form action="https://formspree.io/f/mbjbpnrg" method="POST">
                 <div class="input-box">
@@ -105,10 +109,11 @@
                 <img src="img/instagram-contact.png" alt="">
                 <div class="contenido-redes-contacto">
                     <h2>SEGUINOS EN INSTAGRAM</h2>
-                    <p>SORTEOS, PRÓXIMOS PRODUCTOS, y MUCHO MÁS</p>
+                    <p>Sorteos, próximos <br> productos, y mucho más</p>
                     <a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D">VER MÁS</a>
                 </div>
             </div>
+
         </section>
         
     </main>
