--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -46,10 +46,10 @@
         </ul>
         <ul class="mobile-nav-social-list">
             <li class="media-mobile-title">REDES</li>
-            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i></a></li>
-            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i>Wapp</a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i>Gmail</a></li>
         </ul>
     </div>
     <!-- home banner -->
@@ -118,7 +118,17 @@
          </section>
          <div class="drop-btns-container">
             <button id="mayorista">VENTA MAYORISTA <i class="fa-solid fa-chevron-down"></i></button>
+            <div id="mayorista-info" class="info-box">
+                Llevando más de 6 unidades, 15% de descuento. 
+                <br>
+                Pago por efectivo, transferencia, o tarjeta (hasta 3 cuotas fijas) ... 
+            </div>
             <button id="minorista">VENTA MINORISTA <i class="fa-solid fa-chevron-down"></i></button>
+            <div id="minorista-info" class="info-box">
+                Con menos de 6 unidades se considera compra minorista, y no amerita descuento.
+                <br>
+                Pago por efectivo, transferencia ,o tarjeta (hasta 3 cuotas fijas)...  
+            </div>
          </div>
          
 
