--- a/tienda.html
+++ b/tienda.html
@@ -142,7 +142,7 @@
             <!-- Shorts -->
             <div class="card-index Camperas">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$10.500</div>
                 <h2 class="item-title">CAMPERA BRILLITT</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -150,7 +150,7 @@
             <!-- Camperas -->
             <div class="card-index Calza-biker">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$1500</div>
                 <h2 class="item-title">CALZA BIKER</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -158,7 +158,7 @@
             <!-- Carteras -->
             <div class="card-index Cat-suit">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$3800</div>
                 <h2 class="item-title">CATSUIT</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -169,7 +169,7 @@
             <!-- Shorts -->
             <div class="card-index campera-luxy">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$7500</div>
                 <h2 class="item-title">CAMPERA LUXY</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -177,7 +177,7 @@
             <!-- Camperas -->
             <div class="card-index campera-oversize ">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$9500</div>
                 <h2 class="item-title">CAMPERA OVERSIZE</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -185,7 +185,7 @@
             <!-- Carteras -->
             <div class="card-index chaqueta-engomada">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$4500</div>
                 <h2 class="item-title">CHAQUETA ENGOMADA</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -197,7 +197,7 @@
             <!-- Shorts -->
             <div class="card-index top-engomado">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$3500</div>
                 <h2 class="item-title">TOP ENGOMADO</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -205,7 +205,7 @@
             <!-- Shorts -->
             <div class="card-index pollera-engomada">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$5500</div>
                 <h2 class="item-title">POLLERA ENGOMADA</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -213,7 +213,7 @@
             <!-- Shorts -->
             <div class="card-index short-engomado">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$4500</div>
                 <h2 class="item-title">SHORT ENGOMADO</h2>
                 <hr>
                 <a href="">COMPRAR</a>
@@ -225,7 +225,7 @@
             <!-- Shorts -->
             <div class="card-index pollera-eco-cuero">
                 <div class="false-bg"></div>
-                <div class="price">$price</div>
+                <div class="price">$7500</div>
                 <h2 class="item-title">POLLERA ECOCUERO</h2>
                 <hr>
                 <a href="">COMPRAR</a>
